fix: updated navbar toggle alignment for mobile view (#99)

--- a/docs-site/src/css/custom.css
+++ b/docs-site/src/css/custom.css
@@ -117,3 +117,11 @@ pre code {
     --ifm-font-size-base: 15px;
   }
 }
+
+@media (max-width: 996px) {
+  .navbar__toggle {
+    right: 16px !important;
+    left: auto !important;
+    position: absolute !important;
+  }
+}
